Create single-promotion Modules

--- a/src/app/content/single-promotion/single-promotion/single-promotion/single-promotion.component.html
+++ b/src/app/content/single-promotion/single-promotion/single-promotion/single-promotion.component.html
@@ -1,3 +1,4 @@
+<div class="promo-column w-1/4 px-2 py-2">
 <ul class="list">
   <li>
     <button
@@ -17,3 +18,12 @@
     </button>
   </li>
 </ul>
+</div>
+<div class="promo-column w-3/4 px-2 py-2 flex">
+  <div class="w-1/2">
+    test
+  </div>
+  <div class="w-1/2">
+    test
+  </div>
+</div>
