--- a/src/app/features/single-promotion/single-promotion/single-promotion.component.html
+++ b/src/app/features/single-promotion/single-promotion/single-promotion.component.html
@@ -1,6 +1,6 @@
 <button class="back-btn" backButton>
   <span></span>
-  << back
+  << powrót do listy promocji
 </button>
 <section class="flex gap-1">
   <div class="promo-column w-1/4 px-2 py-2">
