--- a/src/styles.scss
+++ b/src/styles.scss
@@ -184,3 +184,12 @@ label {
     font-size: 36px;
   }
 }
+
+
+.b-cake {
+  align-self: start;
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  margin: 50px auto;
+}
