Add routing to add btn

--- a/src/app/features/promotions-grid/table/table.component.html
+++ b/src/app/features/promotions-grid/table/table.component.html
@@ -1,7 +1,4 @@
-<button type="button" class="add-btn text-white bg-[#9f0927] hover:bg-[#870620] focus:ring-4 focus:outline-none focus:ring-[#9f0927]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:hover:bg-[#9f0927]/80 dark:focus:ring-[#9f0927]/40 mr-2 mb-2">
-  <svg class="w-4 h-4 mr-2 -ml-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Layer_1" style="enable-background:new 0 0 512 512;fill: #fff;" version="1.1" viewBox="64 64 384 384" xml:space="preserve"><path d="M417.4,224H288V94.6c0-16.9-14.3-30.6-32-30.6c-17.7,0-32,13.7-32,30.6V224H94.6C77.7,224,64,238.3,64,256  c0,17.7,13.7,32,30.6,32H224v129.4c0,16.9,14.3,30.6,32,30.6c17.7,0,32-13.7,32-30.6V288h129.4c16.9,0,30.6-14.3,30.6-32  C448,238.3,434.3,224,417.4,224z"></path></svg>
-  Add
-</button>
+<app-add-btn></app-add-btn>
 
 
 <table class="promotions-table mt-4 mx-auto" id="makeEditable">
