--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 @import 'tailwindcss/utilities';
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+@import './assets/scss/functions';
+@import './assets/scss/colors';
+@import './assets/scss/fonts';
+
+
+
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -90,6 +96,11 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 td, th { padding: 0; }
 
+@import './assets/scss/icons';
+@import './assets/scss/animate';
+@import './assets/scss/modal';
+@import './assets/scss/data-tooltip';
+
 
 * {
     box-sizing: border-box;
@@ -104,6 +115,12 @@ input,
 textarea,
 select {
   padding: 5px 10px;
+  width: 100%;
+}
+
+.form-control {
+  display: grid;
+  grid-template-columns: 1fr 30px;
 }
 
 input[type=date] {
