Final changes part 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <aside>
-  <a class="heading" href="#" target="_blank">Link do projektu</a>
+  <a class="heading" href="#" target="_blank"> &raquo; Link do projektu &laquo;</a>
 </aside>
 <router-outlet></router-outlet>
